# softn.com

./: .eslintrc.cjs  .gitignore  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  release.yml
apps/demo/: package.json
apps/demo/bundles/: AIChat.softn  AIDemo.softn  DeviceKit.softn  GPUDemo.softn  GlamourStudio.softn  MazeEscape3D.softn  Showcase.softn  SnakeGame.softn  TexasHoldem.softn  ThreeDemo.softn
apps/demo/bundles/AIChat/: manifest.json  permission.json
apps/demo/bundles/AIDemo/: manifest.json  permission.json
apps/demo/bundles/DeviceKit/: manifest.json  permission.json
apps/demo/bundles/GPUDemo/: manifest.json  permission.json
apps/demo/bundles/GlamourStudio/: README.md  manifest.json  permission.json
apps/demo/bundles/MazeEscape3D/: manifest.json
apps/demo/scripts/: ascii-map.js  build-bundle.cjs  build-html-map.js  build-office-bg.cjs  fix-clothing-sprites.js  fix-clothing-v6.js  generate-glamour-icon.cjs  generate-icons.cjs  inspect-tiles.js  test-bundle.cjs  test-chair-u.js  test-texasholdem-gameplay.cjs  update-delays.js  update-map.js  update-ui-scale.js
apps/softn-builder/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/softn-builder/scripts/: check-component-registry.mjs
apps/softn-builder/src/: App.tsx  file-system-access.d.ts  main.tsx
apps/softn-builder/src-tauri/: Cargo.toml  tauri.conf.json
apps/softn-builder/src-tauri/icons/: icon.icns
apps/softn-builder/src-tauri/src/: lib.rs  main.rs
apps/softn-loader/: index.html  package.json  vite.config.ts
apps/softn-loader/scripts/: copy-shell-ext.cjs  generate-icons.cjs
apps/softn-loader/shell-extension/: Cargo.toml  build.rs  install.bat  uninstall.bat
apps/softn-loader/shell-extension/src/: lib.rs
apps/softn-loader/src/: App.tsx
apps/softn-loader/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
apps/softn-loader/src-tauri/capabilities/: android.json  default.json
apps/softn-loader/src-tauri/icons/: icon.icns
apps/softn-loader/src-tauri/src/: lib.rs  main.rs
apps/softn-web/: index.html  package.json  vite.config.ts  vitest.config.ts
apps/softn-web/public/: GlamourStudio.softn  MazeEscape3D.softn  Showcase.softn  SnakeGame.softn  TheOffice.softn  ThreeDemo.softn  manifest.json
apps/softn-web/src/: App.tsx  main.tsx
apps/softn-web/test/: bundleProcessor.test.ts
scripts/: signaling-server.mjs
(+137 files in other folders)
