[package]
name = "softn-builder"
version = "0.1.0"
description = "SoftN Application Builder IDE"
authors = ["SoftN Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "softn_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
