[package]
name = "softn-shell-extension"
version = "0.1.0"
edition = "2021"
description = "Windows Shell Extension for .softn file icons"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.58", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
] }
windows-core = "0.58"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
flate2 = "1.0"
resvg = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embed-resource = "2"
