[package]
name = "softn-loader"
version = "0.1.0"
description = "SoftN Application Runtime"
authors = ["SoftN Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "softn_loader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "image-png", "image-ico"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# XDB P2P Database
xdb = { path = "../../../../xdb.org/crates/xdb" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-cli = "2"
